classDiagram

    class HabilitacionNM {
	    -int id_piloto
	    -int id_certificacion
	    +Date fecha_alta
	    +Date fecha_caducidad
    }

    class Piloto {
	    -int id_piloto
      -int id_usuario
    }

    class Certificacion {
	    -int id_certificacion
	    +String nombre
	    +String tipo
    }

    class Operacion {
	    -int id_operacion
	    -int id_usuario
      +String nombre_operacion
	    +int current_step
    }

    class Anexo4{
      -int id_anexo_1
      -int id_operacion
      +String descripcion_objetivos
      +Date fecha_hora_prevista
      +String medios_materiales
      +String direccion
      +String coords
      +boolean? FIZ
      +boolean? aerodromos_helipuertos
      +boolean? zonas_restringidas
      +boolean? zonas_seguridad_militar
      +boolean? instalaciones_servicios_comunidad
      +boolean? distancia_edificios
      +boolean? ministerio_5_dias
      +boolean? ZRVF
      +boolean? zonas_proteccion_medioambiental
      +String imagen_espacio_aereo
      +boolean? modelo_semantico_zona_vuelo
      +boolean? geografia_vuelo_CONOPS
      +boolean? volumen_contingencia
      +boolean? margen_riesgo_tierra
      +boolean? zona_controlada_accesos
      +boolean? observadores_asistentes
      +boolean? revisan_NOTAMS
      +boolean? solicita_COOP_ENAIRE
      +String? otros
      +String nombre_responsable
      +Date fecha_filled_form
    }

    class Op_Personal_NM {
        +int id_operacion
        +int id_usuario
        +boolean es_definitivo
        +String rol
    }
    class Op_Drones_NM {
        +int id_operacion
        +int id_aeronave
        +boolean es_definitivo
        +String uso_previsto
    }

    class Anexo5{
      -int id_anexo_5
      -int id_operacion
    }

    class Anexo6{
      -int id_anexo_6
      -int id_operacion
    }

    class Anexo7{
      -int id_anexo_7
      -int id_operacion
    }

    class Anexo8{
      -int id_anexo_8
      -int id_operacion
    }

    class AeroNave {
        -int aircraft_id PK
        +ApplicantType applicant_type
        +string applicant_name
        +string manufacturer_name
        +string operador_name
        +int operator_number
        +boolean privately_built
        +string model
        +AircraftType type
        +int serial_number
        +AircraftClass class
        +double mtom
        +double wingspan
        +double max_speed
        +double impact_energy
        +int max_autonomy
        +boolean camera
        +boolean tether
        +double cable_length
        +PowerSource power_source
        +PowerSourceType power_source_type
        +string accessories
        +string observations
        +string image_path
        +LocalDate purchase_date
    }

    class Aseguradora {
	    -int id_seguro
	    +String nombre
	    +Date fecha_comienzo
	    +Date fecha_caducidad
	    +Long importe
    }

    class Operadora {
	    -int id_operadora
	    +String nombre
      +int id_fidscal
      +int num_operadora
      +int codigo_secreto_rid
      +String path_certificado_easa
      +String path_certificado_no_easa
      +String direccion
      +int cod_postal
      +String poblacion
      +String provincia
      +String email
      +int num_telefono
    }

    class Usuario{
      -int id_usuario
      -int id_operadora
      +string nombre
      +String apellidos
      +String nombre_usuario
      +String password
      +String correo
      +int num_telefono
      +String tipo_usuario
      +String path_imagen
    }

    Piloto "1" -- "n" HabilitacionNM
    Certificacion "1" -- "n" HabilitacionNM
    Piloto "1" -- "n" Operacion
    AeroNave "1" -- "n" Operacion
    AeroNave "1" -- "1" Aseguradora
    Piloto "n" --|> "1" Usuario
    Usuario "n" --|> "1" Operadora
    AeroNave "n" <|-- "1" Operadora

    Operacion "1" -- "*" Op_Personal_NM
    Operacion "1" -- "*" Op_Drones_NM
    Anexo4 --|> Operacion : "Lee de"
    Anexo5 --|> Operacion : "Confirma en"

    Operacion "1" -- "1" Anexo6 : contiene
    Operacion "1" -- "1" Anexo7 : contiene
    Operacion "1" -- "1" Anexo8 : contiene